test-app1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-app1-service
  namespace: test-app1 
spec:
  selector:
    app: test-app1 
  ports:
  - protocol: TCP
    port: 80 
    targetPort: 80 
  type: ClusterIP
